--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@ h2 {
 a {
     font-family: "Montserrat";
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 a:hover {
@@ -47,10 +47,26 @@ a i {
 }
 
 .card {
+    border: 2px solid;
+    border-color: #00000000;
     border-radius: 0;
-    border-color: rgba(255, 255, 255, 0.25);
-    background-color: #252525;
+    background-color: rgba(255, 255, 255, 0.05);
     color: white;
+}
+
+.card:hover {
+    border-color: rgba(255, 255, 255, 0.5);
+}
+
+.list-group-item {
+    border: 0;
+    border-radius: 0;
+    background-color: rgba(255, 255, 255, 0.05);
+    color: white;
+}
+
+.list-group-item:hover {
+    background-color: rgba(255, 255, 255, 0.25);
 }
 
 .btn {
@@ -62,6 +78,10 @@ a i {
     background-color: #252525;
     color: #252525;
     text-shadow: none;
+}
+
+.spoiler a {
+    color: #252525;
 }
 
 .spoiler:hover, .spoiler:active {
