--- a/assets/style.css
+++ b/assets/style.css
@@ -1,107 +1,348 @@
-/*Google Fonts*/
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
+:root {
+    font-family: BlinkMacSystemFont, PingFang SC, Microsoft YaHei, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, Arial, sans-serif;
+}
 
-body {
+body::selection, p::selection, a::selection, h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, ul::selection, li::selection, div::selection, span::selection {
+    background-color: #1e86dd;
+    color: white;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: black;
+}
+
+body, p, a, h1, h2, h3, h4, h5, h6, ul, li, div {
     margin: 0;
-    background-color: #252525;
-    background-size: cover;
-    background-repeat: no-repeat;
+    padding: 0;
 }
 
-h1, h2, h3, h4, h5, p, a {
-    font-family: "Montserrat";
-}
-
-h1, h2, h3, h4, h5 {
-    font-weight: bold;
-}
-
-h2 {
-    margin: 32px;
+h1 {
     font-size: 48px;
-    font-family: "Montserrat";
-    line-height: 1.18;
-    letter-spacing: -0.02em;
-    font-weight: bold;
-    color: #1d1d1f;
+    font-weight: bolder;
+    color: white;
+}
+
+p, a, h1, h2, h3, h4, h5, h6 {
+    color: white;
 }
 
 a {
-    font-family: "Montserrat";
     text-decoration: none;
-    color: white;
 }
 
-a:hover {
-    color: #1e86dd;
-}
-
-a i {
-    font-size: 16px;
+#icon-left {
     margin-left: 8px;
 }
 
-.nav-link i {
-    margin-left: 0;
+#icon-right {
     margin-right: 8px;
 }
 
-.card {
-    border: 2px solid;
-    border-color: #00000000;
-    border-radius: 0;
-    background-color: rgba(255, 255, 255, 0.05);
+/** blur **/
+.blur {
+    position: relative;
+    backdrop-filter: blur(64px);
+    -webkit-backdrop-filter: blur(64px);
+}
+
+/** user-select **/
+.us-n {
+    user-select: none;
+}
+
+/** display **/
+.dp-ib {
+    display: inline-block;
+}
+
+/** font-size **/
+.fs-xxsm, .tx-xxsm, .fs-xxs, .tx-xxs  {
+    font-size: xx-small;
+}
+
+.fs-xsm, .tx-xsm, .fs-xs, .tx-xs {
+    font-size: x-small;
+}
+
+.fs-smr, .ts-smr {
+    font-size: smaller;
+}
+
+.fs-sm, .ts-sm, .fs-s, .ts-s {
+    font-size: small;
+}
+
+.fs-m, .ts-m {
+    font-size: medium;
+}
+
+.fs-l, .ts-l {
+    font-size: large;
+}
+
+.fs-lr, .ts-lr {
+    font-size: larger;
+}
+
+.fs-xl, .ts-xl {
+    font-size: x-large;
+}
+
+.fs-xxl, .ts-xxl {
+    font-size: xx-large;
+}
+
+/** font-weight **/
+.fw-100 {
+    font-weight: 100;
+}
+
+.fw-200 {
+    font-weight: 200;
+}
+
+.fw-300 {
+    font-weight: 300;
+}
+
+.fw-400 {
+    font-weight: 400;
+}
+
+.fw-500 {
+    font-weight: 500;
+}
+
+.fw-600 {
+    font-weight: 600;
+}
+
+.fw-700 {
+    font-weight: 700;
+}
+
+.fw-800 {
+    font-weight: 800;
+}
+
+.fw-900 {
+    font-weight: 900;
+}
+
+.fw-b {
+    font-weight: bold;
+}
+
+.fw-br {
+    font-weight: bolder;
+}
+
+/** text-transform **/
+.tt-l {
+    text-transform: lowercase;
+}
+
+.tt-c {
+    text-transform: capitalize;
+}
+
+.tt-n {
+    text-transform: none;
+}
+
+.tt-u {
+    text-transform: uppercase;
+}
+
+.marquee {
+    width: 100%;
+    color: white;
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.marquee p {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 15s linear infinite;
+}
+
+@keyframes marquee {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(-100%, 0);
+    }
+}
+
+/** nav bar **/
+nav {
+    background: linear-gradient(to bottom, black, rgba(0, 0, 0, 0.5));
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+}
+
+/** censord **/
+#censord {
+    display: inline-block;
+    background-color: white;
+    color: white;
+    transition: .25s;
+}
+
+#censord:hover {
+    color: black;
+    transition: .25s;
+}
+
+#censord::selection {
     color: white;
 }
 
-.card:hover {
-    border-color: rgba(255, 255, 255, 0.5);
+#fake-censord {
+    display: inline-block;
+    background-color: white;
+    color: white;
 }
 
-.list-group-item {
+#fake-censord::selection {
+    color: white;
+}
+
+
+/** list **/
+ul {
+    color: white;
+    list-style-type: none;
+}
+
+ul li {
+    display: inline;
+}
+
+ul li a {
+    padding: 12px;
+    text-decoration: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+    transition: .25s;
+}
+
+ul li a:hover {
+    border-bottom: 1px solid white;
+    transition: .25s;
+}
+
+ul li:not(:last-child)::after {
+    content: '\\';
+    margin-left: 16px;
+    margin-right: 16px;
+    color: rgba(255, 255, 255, 0.25);
+}
+
+.list2 a {
+    padding: 0;
+    border-bottom: 0;
+    text-decoration: none;
+    background: linear-gradient(to left, transparent, #1e86dd) no-repeat left bottom;
+    background-size: 0 2px;
+    transition: .6s;
+}
+
+.list2 a:hover {
+    border-bottom: 0;
+    background-position-x: left;
+    background-size: 100% 2px;
+}
+
+/** friends links **/
+.friends-links a {
+    padding: 0;
+    border-bottom: 0;
+}
+
+.friends-links div {
+    background-color: rgba(255, 255, 255, 0.05);
+    transition: .25s;
+}
+
+.friends-links div:hover {
+    background-color: #1e86dd;
+    transition: .25s;
+}
+
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.gradient-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), black 90%);
+}
+
+/** footer **/
+footer hr {
     border: 0;
-    border-radius: 0;
-    background-color: rgba(255, 255, 255, 0.05);
-    color: white;
-}
-
-.list-group-item:hover {
+    height: 1px;
+    margin-left: 24px;
+    margin-right: 24px;
     background-color: rgba(255, 255, 255, 0.25);
 }
 
-.btn {
-    border-radius: 0;
+footer {
+    color: rgba(255, 255, 255, 0.5);
+}
+
+footer a {
+    color: rgba(255, 255, 255, 0.5);
+    transition: .25s;
+}
+
+footer a:hover {
     color: white;
+    transition: .25s;
 }
 
-.btn:hover {
-    background-color: rgba(255, 255, 255, 0.25);
-}
-
-/*spoiler mask*/
-.spoiler {
-    background-color: #252525;
-    color: #252525;
-    text-shadow: none;
-}
-
-.spoiler a {
-    color: #252525;
-}
-
-.spoiler:hover, .spoiler:active {
+footer ul {
     color: white;
+    list-style-type: none;
 }
 
-.spoiler:hover a {
+footer ul li:not(:last-child) {
+    display: inline;
+}
+
+footer ul li a {
+    padding: 0;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.5);
+    border-bottom: none;
+    transition: .25s;
+}
+
+footer ul li a:hover {
     color: white;
+    border-bottom: none;
+    transition: .25s;
 }
 
-.spoiler:hover a:hover {
-    color: #1e86dd;
-}
-
-/*footer*/
-footer:hover a:hover {
-    color: white;
+ul li:not(:last-child)::after {
+    content: '\\';
+    margin: 16px;
+    color: rgba(255, 255, 255, 0.25);
 }
